# Mnemorium

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vercel.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml  tauri-build.yml
components/: CreatePalaceModal.tsx  Onboarding.tsx  QuickActionsPanel.tsx  Settings.tsx
components/annotations/: AnnotationForm.tsx  AnnotationList.tsx  AnnotationModal.tsx  AnnotationStickyNote.tsx  AutoGenerate.tsx  ImprovedAIFlow.tsx  RecallAnnotationCard.tsx  (+1 more)
docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  SECURITY.md
hooks/: useAI.ts  useAIGeneration.ts  useFSRS.ts  useTauri.ts
lib/: aiProvider.ts  exportImport.ts  fsrs.ts  imageDB.ts  imageUtils.ts  migration.ts  store.ts  tauriImageStorage.ts  tauriStorage.ts
pages/: _app.tsx  _document.tsx  index.tsx  userhome.tsx
python-server/: main.py  requirements.txt
scripts/: build_python_server.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: annotation.rs  image.rs  mod.rs  palace.rs  recall.rs  settings.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/migrations/: 001_initial.sql  002_fsrs.sql  003_recall_sessions.sql  004_settings.sql
src-tauri/src/python/: manager.rs  mod.rs
styles/: globals.css
tests/: setup.ts
types/: ai.ts  index.ts
website/: package-lock.json  package.json  tailwind.config.js
(+27 files in other folders)
